  are working as expected
- Frame borders with a width > 1 are drawn correctly again
- Fixed some crashing code

Reggie, 30.10.1999:
-----------------
- KRestrictedLine -> QLineEdit + QValidator
- Improved cursor navigation inside tables

Reggie, 8.11.1999:
-----------------
- When setting text attributes of a selected text only the chaged attribute(s)
  is changed, not the whole current format. So, if you have e.g. some bold and
  some italic text selected and change the color, only the color is changed
  and _not_ the attributes too (this was the case until now...).

Reggie, 10.11.1999
-----------------
- Saving and loading embedded parts works now

Reggie, 14.11.1999:
-----------------
- Implemented a menu entry to create a template from the document

Reggie, 17.11.1999:
-----------------
- Fixes

Reggie, 20.11.1999:
-----------------
Started working on automatically removing empty pages at the end. It
already works somehow, but the code is not used at the moment, as
there are some annoying bugs.

Reggie, 21.11.1999:
-----------------
- Shortcuts CTRL+B, CTRL+U, CTRL+I for bold, italic, underline works

Reggie, 27.11.1999
-----------------
- Fixed getting initial focus
- Got rid of the hack which inserts a space if you open an empty documen
  (not needed anymore)

Reggie, 28.11.1999
-----------------
- Small fix for scrolling (new selection stuff is not comitted yet...)

Reggie, 9.12.1999:
----------------
- Got rid of a shortcut which was used 3 times :-) (ALT + C)
- Implemented choosing fot through the menu using the KFontDialog
- The few unimplemented menu entries popup a message box with the info, that
  this entry is unimplemented
- Fixed creating table of contents
- Select all is now ALT + A, CTRL + A and CTRL + E work as expeced

Reggie, 19.12.1999:
-----------------
- It doesn't crash anymore when splitting a line which contains
  footnotes/endnotes - but footnotes/endnotes are a really broken, I think
  I need to rewrite that part
